--- a/src/main/resources/assets/attributeslib/lang/ko_kr.json
+++ b/src/main/resources/assets/attributeslib/lang/ko_kr.json
@@ -1,33 +1,33 @@
 {
-    "item.modifiers.both_hands": "When Held:",
+    "item.modifiers.both_hands": "들고 있을 시:",
 
-    "attributeslib.adv.base": "[Entity: %s | Item: %s]",
-    "attributeslib.adv.sharpness_bonus": "[Sharp: +%s]",
+    "attributeslib.adv.base": "[개체: %s | 아이템: %s]",
+    "attributeslib.adv.sharpness_bonus": "[날카로움: +%s]",
 
 	"attributeslib.value.flat": "%s",
 	"attributeslib.value.percent": "%s%%",
 
     "attributeslib.value.boolean.enabled": "활성화",
     "attributeslib.value.boolean.disabled": "비활성화",
-    "attributeslib.value.boolean.enable": "Enables",
-    "attributeslib.value.boolean.force_disable": "Forcibly Disables",
-    "attributeslib.value.boolean.invalid": "Invalid",
+    "attributeslib.value.boolean.enable": "활성화",
+    "attributeslib.value.boolean.force_disable": "강제 비활성화",
+    "attributeslib.value.boolean.invalid": "유효하지 않음",
 
     "attributeslib.modifier.plus": "+%s %s",
     "attributeslib.modifier.take": "-%s %s",
     "attributeslib.modifier.bool": "%s %s",
 
-	"attributeslib.gui.attributes": "Attributes",
+	"attributeslib.gui.attributes": "속성",
 	"attributeslib.gui.base": "기본: %s",
 	"attributeslib.gui.min": "최소: %s",
 	"attributeslib.gui.max": "최대: %s",
 	"attributeslib.gui.modifiers": "수정치",
-	"attributeslib.gui.addition": "Addition: %s",
-	"attributeslib.gui.multiply_base": "Multiply Base: %s",
-	"attributeslib.gui.multiply_total": "Multiply Total: %s",
-	"attributeslib.gui.press_shift": "Hold Shift for more info.",
-	"attributeslib.gui.current": "Current: %s",
-	"attributeslib.gui.show_attributes": "Show Attributes",
+	"attributeslib.gui.addition": "추가: %s",
+	"attributeslib.gui.multiply_base": "증가 수치 기본: %s",
+	"attributeslib.gui.multiply_total": "증가 수치 합계: %s",
+	"attributeslib.gui.press_shift": "쉬프트 키를 꾹 눌려 많은 정보를 봅니다.",
+	"attributeslib.gui.current": "현재: %s",
+	"attributeslib.gui.show_attributes": "속성 보기",
 
 	"attribute.name.generic.armor.desc": "Increases physical damage reduction.",
 	"attribute.name.generic.armor_toughness.desc": "Reduces the effectiveness of enemy armor reduction.",
@@ -47,7 +47,7 @@
 	"forge.swim_speed.desc": "How fast you swim, relative to normal.",
 
 	"attributeslib:draw_speed": "뽑는 속도",
-	"attributeslib:draw_speed.desc": "활, 쇠뇌, 삼지창 같은 원거리 무기를 뽑는 속도를 빠르게 합니다.",
+	"attributeslib:draw_speed.desc": "활, 쇠뇌, 삼지창 같은 원거리 무기를 뽑는 속도를 빠르게 뽑는 지에",
 
 	"attributeslib:crit_chance": "치명타 확률",
 	"attributeslib:crit_chance.desc": "당신이 가한 치명타가 치명타 피해에 따라 추가 피해를 가합니다.",
@@ -61,61 +61,61 @@
 	"attributeslib:fire_damage": "불 피해",
 	"attributeslib:fire_damage.desc": "근접 공격에 추가 마법 피해가 적용되고, 적중 시 적을 불태우게 만듭니다.",
 
-	"attributeslib:life_steal": "생명력 뺏기",
+	"attributeslib:life_steal": "생명 빨아들이기",
 	"attributeslib:life_steal.desc": "Percentage of post-mitigation damage which will heal you.",
 
-	"attributeslib:current_hp_damage": "Current HP Damage",
-	"attributeslib:current_hp_damage.desc": "Bonus physical damage applied on melee attacks, based on the target's health.",
+	"attributeslib:current_hp_damage": "현재 체력 피해",
+	"attributeslib:current_hp_damage.desc": "대상의 체력에 따라 근접 공격의 물리 피해를 추가로 적용합니다.",
 
-	"attributeslib:overheal": "Overheal",
+	"attributeslib:overheal": "과치료",
 	"attributeslib:overheal.desc": "Percentage of post-mitigation damage which will grant you an absorption shield.",
 
 	"attributeslib:ghost_health": "Ghost Health",
 	"attributeslib:ghost_health.desc": "Not Yet Implemented",
 
-	"attributeslib:mining_speed": "Mining Speed",
-	"attributeslib:mining_speed.desc": "How fast you mine blocks, compared to normal.",
+	"attributeslib:mining_speed": "채광 속도",
+	"attributeslib:mining_speed.desc": "평소와 비교하여 블록을 빠르게 채굴하는 속도입니다.",
 
-	"attributeslib:arrow_damage": "Arrow Damage",
-	"attributeslib:arrow_damage.desc": "Damage multiplier for arrows. Tridents are arrows.",
+	"attributeslib:arrow_damage": "화살 피해",
+	"attributeslib:arrow_damage.desc": "화살의 피해 배율. 삼지창도 화살로 취급합니다.",
 
-	"attributeslib:arrow_velocity": "Arrow Velocity",
-	"attributeslib:arrow_velocity.desc": "Speed multiplier for arrows. Arrow damage scales with velocity.",
+	"attributeslib:arrow_velocity": "화살 속도",
+	"attributeslib:arrow_velocity.desc": "화살의 속도 배율. 속도에 따라 화살 피해가 증가합니다.",
 
-	"attributeslib:experience_gained": "Experience Gained",
+	"attributeslib:experience_gained": "얻는 경험치량",
 	"attributeslib:experience_gained.desc": "Multiplier on how much experience you gain from breaking blocks and killing mobs.",
 
-	"attributeslib:healing_received": "Healing Received",
+	"attributeslib:healing_received": "받는 치료량",
 	"attributeslib:healing_received.desc": "Multiplier on all incoming healing.",
 
-	"attributeslib:armor_pierce": "Armor Pierce",
+	"attributeslib:armor_pierce": "방어 관통",
 	"attributeslib:armor_pierce.desc": "Flat reduction to the target's armor value.",
 
-	"attributeslib:armor_shred": "Armor Shred",
+	"attributeslib:armor_shred": "방어 파쇄",
 	"attributeslib:armor_shred.desc": "Percentage reduction to the target's armor value.",
 
-	"attributeslib:prot_pierce": "Protection Pierce",
+	"attributeslib:prot_pierce": "보호 관통",
 	"attributeslib:prot_pierce.desc": "Flat reduction to the target's protection point total.",
 
-	"attributeslib:prot_shred": "Protection Shred",
+	"attributeslib:prot_shred": "방어력 ",
 	"attributeslib:prot_shred.desc": "Percentage reduction to the target's protection point total.",
 
-	"attributeslib:dodge_chance": "Dodge Chance",
+	"attributeslib:dodge_chance": "회피 확률",
 	"attributeslib:dodge_chance.desc": "Chance to dodge a melee attack or a projectile.",
 
-    "attributeslib:elytra_flight": "Elytra Flight",
+    "attributeslib:elytra_flight": "겉날개 비행",
     "attributeslib:elytra_flight.desc": "If you can fly as if wearing an Elytra.",
 
-    "attributeslib:creative_flight": "Creative Flight",
+    "attributeslib:creative_flight": "크레이티브 비행",
     "attributeslib:creative_flight.desc": "If you can fly as if in Creative Mode.",
 
 	"comment_id": "MobFx - descriptions are duplicated for JEED support.",
 
-    "effect.attributeslib.knowledge": "Ancient Knowledge",
+    "effect.attributeslib.knowledge": "고대 지식",
     "effect.attributeslib.knowledge.desc": "Increases experience gained from kills and blocks.",
     "effect.attributeslib.knowledge.description": "Increases experience gained from kills and blocks.",
 
-    "effect.attributeslib.sundering": "Sundering",
+    "effect.attributeslib.sundering": "분열",
     "effect.attributeslib.sundering.desc": "Increases damage received.",
     "effect.attributeslib.sundering.description": "Increases damage received.",
 
@@ -149,7 +149,7 @@
     "effect.minecraft.poison.desc": "Periodically inflicts non-lethal damage.",
     "effect.minecraft.regeneration.desc": "Causes you to regenerate health over time.",
 
-    "comment_id": "Damage Sources",
+    "comment_id": "피해 근원",
 
     "death.attack.attributeslib:bleeding": "%1$s bled out",
     "death.attack.attributeslib:bleeding.item": "%1$s bled out due to %2$s's %3$s",
